# slack-r

./: .gitignore  Cargo.toml  readme.md
src/: api.rs  bot.rs  dates.rs  main.rs
src/api/: client.rs  endpoints.rs  generic.rs  mod.rs
src/bot/: client.rs  config.rs  mod.rs  utils.rs
