[package]
name = "slack-r"
version = "0.1.2"
authors = ["Hadrien Hamana <hadrien@hamana.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
log = "0.4"
simplelog = "^0.7.6"
async-std = "1.6"
surf = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"